# adventofcode2022

./: adventofcode2022.cabal  day01.lhs  day02.lhs  day03.lhs  day04.lhs  day05.lhs  day06.lhs  day07.lhs  day08.lhs  day09.lhs  day10.lhs  day11.lhs  day12.hs  day12.lhs  day13.lhs  day14.lhs  day15.lhs  day16.lhs  day17.lhs  day18.lhs  day19.lhs  day20.lhs  day21.lhs  day22.lhs  day23.lhs  day24.lhs  day25.lhs
