cabal-version: 1.12
name:           adventofcode2022
version:        2022
author:         Jean-Baptiste Mazon
copyright:      2022
build-type:     Simple

executable day01
  main-is: day01.lhs
  build-depends: base, extra
  default-language: Haskell2010
  ghc-options: -Wall -Wno-type-defaults

executable day02
  main-is: day02.lhs
  build-depends: base
  default-language: GHC2021
  default-extensions: RecordWildCards
  ghc-options: -Wall -Wno-incomplete-patterns

executable day03
  main-is: day03.lhs
  build-depends: base, split
  default-language: Haskell2010
  ghc-options: -Wall -Wno-incomplete-patterns

executable day04
  main-is: day04.lhs
  build-depends: base, intervals, split
  default-language: Haskell2010
  ghc-options: -Wall -Wno-incomplete-patterns

executable day05
  main-is: day05.lhs
  build-depends: base, array
  default-language: Haskell2010
  default-extensions: ViewPatterns
  ghc-options: -Wall -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

executable day06
  main-is: day06.lhs
  build-depends: base
  default-language: GHC2021
  default-extensions: ViewPatterns
  ghc-options: -Wall

executable day07
  main-is: day07.lhs
  build-depends: base, containers, filepath, mtl
  default-language: GHC2021
  ghc-options: -Wall -Wno-incomplete-patterns

executable day08
  main-is: day08.lhs
  build-depends: base, array, linear
  default-language: GHC2021
  ghc-options: -Wall
